# financial-option-numeric-simulation

./: .gitignore  README.md  config.py  derivacion_bs_diferencias_finitas.md  main.py  pyproject.toml  regenerate_plots.py
docs/: derivacion_bs_diferencias_finitas.md  formulas_proyecto.md
notebooks/: 01_calibracion_mle_1.ipynb  02_convergencia_crank_nicolson_1.ipynb  03_analisis_griegas_y_volatilidad_1.ipynb
src/: cranck_nicelson_optimizado.py  data.py  extracion_datos.py  generar_graficas.py  griegas.py  pde_solver.py  resultados_io.py  simulacion.py
tests/: test_extraccion_datos.py  test_simulacion.py
