[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valoracion-opciones"
version = "0.1.0"
description = "Valoración de opciones financieras mediante Crank-Nicolson, Monte Carlo y calibración MLE — proyecto de Física Computacional, UNMSM"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "yfinance>=0.2.40",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pyright]
extraPaths = ["."]

